[package]
authors = ["The Rust Project Developers"]
name = "rustc_driver"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
rustc_driver_impl = { path = "../rustc_driver_impl" }

[features]
llvm = ['rustc_driver_impl/llvm']
max_level_info = ['rustc_driver_impl/max_level_info']
